# cpp-cli-helper

./: CMakeLists.txt  README.md  main.cpp
development/command/include/: commands.h
development/command/src/: commands.cpp
development/commands/create_project/copy_template_project/include/: copy_template_project.h
development/commands/create_project/copy_template_project/src/: copy_template_project.cpp
development/commands/create_project/include/: create_project.h
development/commands/create_project/src/: create_project.cpp
development/commands/create_project/update_cmake_project_name/include/: update_cmake_project_name.h
development/commands/create_project/update_cmake_project_name/src/: update_cmake_project_name.cpp
development/commands/help/include/: help.h
development/commands/help/src/: help.cpp
development/locale/include/: load_en_static_texts.h  load_tr_static_texts.h  locale.h
development/locale/src/: load_en_static_texts.cpp  load_tr_static_texts.cpp  locale.cpp
model/command/include/: command_type.h
model/command/src/: command_type.cpp
